<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="test.bmi.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/vazir"
        android:text="@string/title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:padding="16dp"
        app:borderColor="@color/red"
        app:borderWidth="2dp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <EditText
            android:id="@+id/height_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir"
            android:gravity="center"
            android:hint="@string/height"
            android:inputType="number" />

    </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>


    <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="16dp"
        app:borderColor="@color/red"
        app:borderWidth="2dp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/height">

        <EditText
            android:id="@+id/weight_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir"
            android:gravity="center"
            android:hint="@string/weight"
            android:inputType="number" />

    </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>


    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/vazir"
        android:padding="20dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/weight" />


    <TextView
        android:id="@+id/bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/vazir"
        android:gravity="center"
        android:text="@string/bmi"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/calculate" />


    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/vazir"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/bmi" />


    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/vazir"
        android:gravity="center"
        android:text="@string/status"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/result" />


    <TextView
        android:id="@+id/statusValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/vazir"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/status" />


    <Button
        android:id="@+id/restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/vazir"
        android:padding="20dp"
        android:text="@string/restart"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>